--- a/Simran_NuthalapatiYesukumar_100851182_Lab4.ipynb
+++ b/Simran_NuthalapatiYesukumar_100851182_Lab4.ipynb
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Weight prediction using the regression algorithm\n",
+    "#Species prediction using the Classification algorithm\n",
     "X=df1.drop(['Species'],axis=1)\n",
     "y=df1['Species']\n",
     "\n",
